cabal-version:      2.4
name:               ondim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas V. R.
maintainer:         lvr@s-viva.xyz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

flag with-pandoc
  description: Include Pandoc definitions and dependencies.
  default:     True

flag with-html
  description: Include HTML (xmlhtml) definitions and dependencies.
  default:     True

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  exposed-modules:  Ondim
                    Ondim.Extra
                    Ondim.Extra.Expansions
                    Ondim.Extra.Loading
  other-modules:    Ondim.MultiState
                    Ondim.HasSub
  build-depends:    base >= 4.14 && < 5
                  , attoparsec
                  , containers
                  , filepath
                  , filepattern
                  , HaTeX
                  , map-syntax
                  , mtl
                  , monad-logger
                  , multistate
                  , relude
                  , neat-interpolation
                  , replace-attoparsec
                  , text
                  , unionmount >= 0.2.1
                  , unliftio-core

  if flag(with-pandoc)
    exposed-modules: Ondim.Pandoc
                     Ondim.Extra.Loading.Pandoc
    build-depends:   pandoc-types
                   , pandoc

  if flag(with-html)
    exposed-modules: Ondim.HTML
                     Ondim.Extra.Loading.HTML
    build-depends:   xmlhtml

  mixins:           base hiding (Prelude)
                  , relude (Relude as Prelude)
                  , relude
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:     -Wall -fprint-potential-instances
  default-extensions:
    TupleSections
    OverloadedStrings
    ImportQualifiedPost
    GeneralizedNewtypeDeriving
    ScopedTypeVariables
    BlockArguments
    ViewPatterns
    DataKinds
    TypeOperators
    TypeApplications
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    LambdaCase
    StandaloneDeriving
    KindSignatures
    TypeFamilies
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
