cabal-version:      2.4
name:               ondim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas V. R.
maintainer:         lvr@s-viva.xyz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

flag with-json
  description: Include JSON definitions and dependencies.
  default:     True

flag with-pandoc
  description: Include Pandoc definitions and dependencies.
  default:     True

flag with-html
  description: Include HTML (xmlhtml) definitions and dependencies.
  default:     True

flag with-whiskers
  description: Include Whiskers definitions and dependencies.
  default:     True

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  exposed-modules:
    Ondim
    Ondim.Extra
    Ondim.Extra.Expansions
    Ondim.Extra.Loading

  other-modules:
    Ondim.MultiWalk.Basic
    Ondim.MultiWalk.Class
    Ondim.MultiWalk.Combinators
    Ondim.MultiWalk.Core
    Ondim.MultiWalk.Substructure

  build-depends:
    , attoparsec
    , base                  >=4.14 && <5
    , containers
    , filepath
    , filepattern
    , monad-logger
    , mtl                   >=2.3
    , multiwalk
    , relude
    , replace-attoparsec
    , text
    , unionmount
    , unliftio-core
    , unordered-containers

  if flag(with-json)
    exposed-modules: Ondim.Extra.BindJSON
    build-depends:
      , aeson
      , scientific

  if flag(with-pandoc)
    exposed-modules:
      Ondim.Targets.Pandoc
      Ondim.Targets.Pandoc.Expansions
      Ondim.Targets.Pandoc.Instances
      Ondim.Targets.Pandoc.Load

    build-depends:
      , pandoc
      , pandoc-types

  if flag(with-html)
    build-depends:   xmlhtml
    exposed-modules:
      Ondim.Targets.HTML
      Ondim.Targets.HTML.Expansions
      Ondim.Targets.HTML.Instances
      Ondim.Targets.HTML.Load

  if flag(with-whiskers)
    build-depends:   megaparsec
    other-modules:   Ondim.Targets.Whiskers.Parser
    exposed-modules:
      Ondim.Targets.Whiskers
      Ondim.Targets.Whiskers.Expansions
      Ondim.Targets.Whiskers.Instances
      Ondim.Targets.Whiskers.Load

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -fprint-potential-instances
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
