cabal-version:      3.4
name:               ondim
version:            0.1.0.0
author:             Lucas V. R.
maintainer:         @lucasvr:matrix.org
extra-source-files: CHANGELOG.md

common common
  default-language:   GHC2021
  ghc-options:        -Wall
  build-depends:
    , base    >=4.14 && <5
    , relude

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    TypeFamilies
    ViewPatterns

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Ondim
    Ondim.Advanced
    Ondim.Debug
    Ondim.Extra.Exceptions
    Ondim.Extra.Expansions
    Ondim.Extra.Standard
    Ondim.Loading
    Ondim.State

  other-modules:
    Ondim.Internal.Basic
    Ondim.Internal.Class
    Ondim.Internal.Core

  build-depends:
    , containers            >=0.6.0 && <0.7
    , filepath
    , filepattern
    , monad-logger
    , mtl                   >=2.2.2 && <2.4
    , text
    , unionmount
    , unliftio-core
    , unordered-containers

library ondim-generic
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-generic/src
  build-depends:
    , multiwalk
    , ondim

  exposed-modules: Ondim.Expansible.Generic

library ondim-th
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-th/src
  build-depends:
    , ondim
    , optics-core
    , template-haskell
    , template-haskell-optics

  exposed-modules: Ondim.Expansible.TH
  other-modules:   Ondim.Expansible.Test

library ondim-whiskers
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-whiskers/src
  build-depends:
    , megaparsec
    , ondim

  other-modules:   Ondim.Targets.Whiskers.Parser
  exposed-modules:
    Ondim.Targets.Whiskers
    Ondim.Targets.Whiskers.Expansions
    Ondim.Targets.Whiskers.Instances
    Ondim.Targets.Whiskers.Load

library ondim-latex
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-latex/src
  build-depends:
    , megaparsec
    , ondim

  other-modules:   Ondim.Targets.LaTeX.Parser
  exposed-modules:
    Ondim.Targets.LaTeX
    Ondim.Targets.LaTeX.Expansions
    Ondim.Targets.LaTeX.Instances
    Ondim.Targets.LaTeX.Load

library ondim-json
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-json/src
  build-depends:
    , aeson
    , ondim:{ondim, ondim-whiskers}
    , scientific

  exposed-modules:
    Ondim.Extra.BindJSON
    Ondim.Targets.Aeson
    Ondim.Targets.Aeson.Expansions
    Ondim.Targets.Aeson.Instances

library ondim-html
  import:          common
  visibility:      public
  hs-source-dirs:  ondim-html/src
  build-depends:
    , conduit
    , containers
    , html-conduit
    , lucid
    , ondim:{ondim, ondim-whiskers}
    , xml-conduit                    >=1.9.0 && <1.10
    , xml-types

  exposed-modules:
    Ondim.Targets.HTML
    Ondim.Targets.HTML.Expansions
    Ondim.Targets.HTML.Instances
    Ondim.Targets.HTML.Load
    Ondim.Targets.HTML.Parser
