cabal-version:      2.4
name:               ondim-html
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas V. R.
maintainer:         @lucasvr:matrix.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: ../CHANGELOG.md

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  build-depends:
    , base          >=4.14  && <5
    , conduit
    , containers
    , html-conduit  >=1.3.1
    , lucid
    , ondim
    , relude
    , xml-conduit
    , xml-types

  exposed-modules:
    Ondim.Targets.HTML
    Ondim.Targets.HTML.Expansions
    Ondim.Targets.HTML.Instances
    Ondim.Targets.HTML.Load
    Ondim.Targets.HTML.Parser

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -fprint-potential-instances
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
