cabal-version:      2.4
name:               ondim-latex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas V. R.
maintainer:         @lucasvr:matrix.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: ../CHANGELOG.md

library
  -- Modules included in this executable, other than Main.
  -- other-modules:

  build-depends:
    , base                 >=4.14  && <5
    , megaparsec
    , ondim
    , relude
    , text-builder-linear  >=0.1.2 && <0.2

  other-modules:      Ondim.Targets.LaTeX.Parser
  exposed-modules:
    Ondim.Targets.LaTeX
    Ondim.Targets.LaTeX.Expansions
    Ondim.Targets.LaTeX.Instances
    Ondim.Targets.LaTeX.Load

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -fprint-potential-instances
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
